--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,25 +15,29 @@ div {
     text-align: center;
 }
 
-.character {
-    width: 200px;
-    height: 150px;
+.button {
+    width: 480px;
+    height: 30px;
     border: 3px;
+    border-radius: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-style: solid;
-}
-
-.character{
     background-color:white;
-    border-color: green;
+    border-color: white;
 }
 
-.choose-opponent {
-    background-color: red;
-    border-color: maroon;
+.buttonInUse {
+    border-color: lightgrey;
 }
 
-.selected-opponent {
-    background-color:black;
-    border-color: green;
-    color: white;
+.buttonNotUse {
+    border-color: white;
+}
+
+.button:hover{
+    border-color: #17A2B8;
 }
