--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ div {
     align-items: center;
     border-style: solid;
     background-color:white;
-    border-color: white;
+    border-color: black;
 }
 
 .buttonInUse {
