--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,27 @@ body {
     background-size: 1080px;
 }
 
+section {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: white;
+    color: #777777;
+    width: 960px;
+    margin: 25px auto;
+    padding: 30px;
+    box-sizing: border-box;
+    border: 2px solid gainsboro;
+}
+
+section h1 {
+    font-size: 2em;
+    color: black;
+    margin: 0;
+    padding-bottom: 10px;
+    /* width, style, color for border-bottom*/
+    border-bottom: 2px solid gainsboro;
+    margin-bottom: 10px;
+}
+
 h3 {
     display: inline-block;
 }
@@ -39,33 +60,28 @@ div {
 }
 
 .button:hover{
-    border-color: #17A2B8;
+    /* border-color: #17A2B8; */
+    /* border-color: lightcyan; */
+    background-image: linear-gradient(to top left,
+                                      rgba(0, 0, 0, .2),
+                                      rgba(0, 0, 0, .2) 30%,
+                                      rgba(0, 0, 0, 0));
+    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
+                inset -2px -2px 3px rgba(0, 0, 0, .6);
+
 }
 
 .buttonCorrect {
-    background-color:green;
+    background-color:lightgreen;
+    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+                inset 2px 2px 3px rgba(0, 0, 0, .6);
 }
 
 .buttonNotCorrect {
     background-color:red;
+    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+                inset 2px 2px 3px rgba(0, 0, 0, .6);
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 .styled {
     border: 0;
@@ -76,20 +92,11 @@ div {
     color: #fff;
     text-shadow: 1px 1px 1px #000;
     border-radius: 10px;
-    background-color: rgba(220, 0, 0, 1);
+    /* background-color: rgba(220, 0, 0, 1); */
     background-image: linear-gradient(to top left,
                                       rgba(0, 0, 0, .2),
                                       rgba(0, 0, 0, .2) 30%,
                                       rgba(0, 0, 0, 0));
     box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
                 inset -2px -2px 3px rgba(0, 0, 0, .6);
-}
-
-.styled:hover {
-    background-color: rgba(255, 0, 0, 1);
-}
-
-.styled:active {
-    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
-                inset 2px 2px 3px rgba(0, 0, 0, .6);
 }
