--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,11 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-size: 1080px;
+    background-size: 1920px;
 }
 
 section {
     font-family: Arial, Helvetica, sans-serif;
     background-color: white;
-    color: #777777;
     width: 800px;
     margin: 25px auto;
     padding: 30px;
@@ -15,11 +14,9 @@ section {
 }
 
 section h1 {
-    font-size: 2em;
     color: black;
     margin: 0;
     padding-bottom: 10px;
-    /* width, style, color for border-bottom*/
     border-bottom: 2px solid gainsboro;
     margin-bottom: 10px;
 }
@@ -34,13 +31,15 @@ h3 {
 
 div {
     text-align: center;
+    padding: 5px;
 }
 
 .button {
     width: 480px;
-    height: 30px;
+    height: 40px;
     border: 3px;
     border-radius: 5px;
+    padding: 3px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -60,8 +59,6 @@ div {
 }
 
 .button:hover{
-    /* border-color: #17A2B8; */
-    /* border-color: lightcyan; */
     background-image: linear-gradient(to top left,
                                       rgba(0, 0, 0, .2),
                                       rgba(0, 0, 0, .2) 30%,
@@ -83,20 +80,3 @@ div {
                 inset 2px 2px 3px rgba(0, 0, 0, .6);
 }
 
-.styled {
-    border: 0;
-    line-height: 2.5;
-    padding: 0 20px;
-    font-size: 1rem;
-    text-align: center;
-    color: #fff;
-    text-shadow: 1px 1px 1px #000;
-    border-radius: 10px;
-    /* background-color: rgba(220, 0, 0, 1); */
-    background-image: linear-gradient(to top left,
-                                      rgba(0, 0, 0, .2),
-                                      rgba(0, 0, 0, .2) 30%,
-                                      rgba(0, 0, 0, 0));
-    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
-                inset -2px -2px 3px rgba(0, 0, 0, .6);
-}
